--- a/src/views/signup.hbs
+++ b/src/views/signup.hbs
@@ -1,22 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-
-<body>
-    {{#if signupMessage}}
-    <div>{{ signupMessage }}</div>
-    {{/if}}
-    <form action="/signup" method="POST">
-        <input type="text" name="email" placeholder="insert email">
-        <input type="password" name="password" placeholder="insert password">
-        <button type="submit"> Sign up</button>
-    </form>
-</body>
-
-</html>
+{{> head}}
+<div class="row">
+    <div class="col-md-4 offset-md-4 mt-4">
+        <div class="card">
+            <div class="card-header">
+                <h3>Sign Up</h3>
+            </div>
+            <div class="card-body">
+                <form action="/signup" method="POST">
+                    <div class="form-group">
+                        <input type="text" name="username" placeholder="insert username" class="form-control">
+                    </div>
+                    <div class="form group">
+                        <input type="password" name="password" placeholder="insert password" class="form-control">
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-block mt-4"> Sign up</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+{{> footer}}
